# dorso-linux

./: .gitignore  LICENSE  MANIFEST.in  PYPI_README.md  README.md  pyproject.toml
.github/workflows/: ci.yml  flathub.yml  publish.yml
data/: dorso.desktop  io.github.gheop.dorso.desktop  io.github.gheop.dorso.metainfo.xml
dorso/: __init__.py  __main__.py  analytics.py  analytics_window.py  app.py  calibration.py  camera_detector.py  camera_hub.py  detector.py  i18n.py  landmark_overlay.py  models.py  onboarding.py  overlay.py  posture_engine.py  screen_lock_observer.py  settings.py  settings_window.py  tray.py  v4l2_cameras.py
flatpak/: io.github.gheop.dorso.yml  python-deps.json
gnome-extension/: extension.js  metadata.json
locales/: dorso.pot
locales/de/LC_MESSAGES/: dorso.mo  dorso.po
locales/es/LC_MESSAGES/: dorso.mo  dorso.po
locales/fr/LC_MESSAGES/: dorso.mo  dorso.po
locales/ja/LC_MESSAGES/: dorso.mo  dorso.po
locales/pt_BR/LC_MESSAGES/: dorso.mo  dorso.po
locales/ru/LC_MESSAGES/: dorso.mo  dorso.po
locales/zh_CN/LC_MESSAGES/: dorso.mo  dorso.po
scripts/: compile-locales.sh  install-autostart.sh  install-extension.sh
tests/: test_analytics.py  test_app_scenarios.py  test_calibration.py  test_camera_detector.py  test_camera_hub.py  test_i18n.py  test_landmark_overlay.py  test_onboarding.py  test_overlay_dbus.py  test_posture_engine.py  test_screen_lock_observer.py  test_settings.py  test_settings_window.py  test_tray.py  test_v4l2_cameras.py
