[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dorso-linux"
version = "0.1.2"
description = "Posture monitoring tool for Linux — webcam slouch detection with screen overlay"
readme = "PYPI_README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Gheop" },
]
keywords = ["posture", "webcam", "mediapipe", "gtk4", "linux", "health", "ergonomics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment :: Gnome",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "opencv-python>=4.8",
    "mediapipe>=0.10",
    "PyGObject>=3.44",
    "Pillow>=10.0",
    "dbus-python>=1.3",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/Gheop/dorso-linux"
Repository = "https://github.com/Gheop/dorso-linux"
Issues = "https://github.com/Gheop/dorso-linux/issues"

[project.scripts]
dorso = "dorso.__main__:main"

[tool.setuptools.packages.find]
include = ["dorso*"]

[tool.setuptools.package-data]
dorso = [
    "../assets/icons/*.png",
    "../data/*.desktop",
    "../locales/*/LC_MESSAGES/*.mo",
    "../locales/*/LC_MESSAGES/*.po",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
# E402: gi.require_version() must come before gi.repository imports
"dorso/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
